<resources>
    <string name="app_name">SantanderDevWeek</string>
    <string name="name_user">Eduarda</string>
    <string name="name_ag" translatable="false">Ag 2030</string>
    <string name="name_cc" translatable="false">Cc 01097954-4</string>
    <string name="txt_saldo_disponivel">Saldo disponivel</string>
    <string name="valor_saldo" translatable="false">R$ 1.324,64</string>
    <string name="saldo_limite">Saldo + Limite:</string>
    <string name="ver_extrato">Ver extrato</string>
    <string name="pagar">Pagar</string>
    <string name="transferir">Transferir</string>
    <string name="recarga">Recarga</string>
    <string name="cartao">Cartão final</string>
    <string name="numero_cartao" translatable="false">0033</string>
    <string name="cd_logo_santander" translatable="false">Logo Santander</string>
    <string name="cd_auxiliar_layout" translatable="false">Auxiliar layout</string>
    <string name="cd_image_update" translatable="false">image update</string>
    <string name="cd_image_expandir" translatable="false">image expandir</string>
    <string name="cd_image_card" translatable="false">image_card</string>
    <string name="cd_image_tranferir" translatable="false">image tranferir</string>
    <string name="cd_image_battery" translatable="false">image battery</string>
    <string name="cd_image_down" translatable="false">image down</string>
    <string name="limite" translatable="false">R$ 2.324,64</string>
    <string name="hello_user">Olá,</string>
</resources>